# boxer

./: .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yaml  config.dev.json  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  main.go
.github/workflows/: docker.yml  docs.yml
.greptile/: config.json
api/: duration.go  errors.go  filestore.go  filestore_test.go  handler.go  handler_test.go  integration_test.go  types.go
api/mocks/: ImageCacher.go  SandboxExecutor.go
config/: config.go  config_test.go
docker/: config.json
docs/: .env.example  .gitignore  README.md  algolia-crawler-config.json  docs.go  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts  swagger.json  swagger.yaml  upload-package.md
docs/docs/: intro.md
docs/docs/api/: boxer-api.info.mdx  download-a-file-from-the-file-store.ParamsDetails.json  download-a-file-from-the-file-store.StatusCodes.json  download-a-file-from-the-file-store.api.mdx  execute-a-command-in-a-sandboxed-container.RequestSchema.json  execute-a-command-in-a-sandboxed-container.StatusCodes.json  execute-a-command-in-a-sandboxed-container.api.mdx  (+6 more)
docs/scripts/: index-docs.sh
docs/static/: swagger.yaml
examples/hello-world/: README.md  hello.py  pyproject.toml
examples/humaneval/: .env.example  .gitignore  README.md  evaluate.py  pyproject.toml
examples/upload-and-run/: README.md  pyproject.toml  run_tests.py
image/: docker.go  pull.go  unpack_test.go
internal/ioutil/: readlimited.go
oci/: builder.go  builder_test.go
sandbox/: bundle.go  bundle_test.go  runsc.go
(+14 files in other folders)
